# inspect-grep

./: Cargo.toml  README.md
logs/: 2025-03-28T13-46-56+00-00_gpqa-diamond_Mb2WQtoGakLjLTNMR4gMAm.eval  2025-03-28T13-47-14+00-00_gpqa-diamond_4dLhGxA36WnSauR29xehc7.eval  2025-03-28T23-01-38+00-00_agentharm_Nxk5Uxvp8fxJ6ecWsUah43.eval  header.json  summaries.json
logs/_journal/: start.json
logs/_journal/summaries/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json
logs/samples/: 1-1_epoch_1.json  1-2_epoch_1.json  1-3_epoch_1.json  1-4_epoch_1.json  10-1_epoch_1.json  10-3_epoch_1.json  10-4_epoch_1.json  11-1_epoch_1.json  11-2_epoch_1.json  11-4_epoch_1.json  13-2_epoch_1.json  13-3_epoch_1.json  13-4_epoch_1.json  14-1_epoch_1.json  14-2_epoch_1.json  14-3_epoch_1.json  17-1_epoch_1.json  19-2_epoch_1.json  19-4_epoch_1.json  20-1_epoch_1.json  20-2_epoch_1.json  20-3_epoch_1.json  21-2_epoch_1.json  21-3_epoch_1.json  21-4_epoch_1.json  22-1_epoch_1.json  22-2_epoch_1.json  22-3_epoch_1.json  22-4_epoch_1.json  23-2_epoch_1.json  23-3_epoch_1.json  23-4_epoch_1.json  24-1_epoch_1.json  24-2_epoch_1.json  24-3_epoch_1.json  24-4_epoch_1.json  25-1_epoch_1.json  25-2_epoch_1.json  25-3_epoch_1.json  25-4_epoch_1.json  (+27 more)
src/: inspect.rs  main.rs
