[package]
name = "fast-eval-read"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
itertools = "0.12"
lazy_static = "1.4"
rayon = "1.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term_size = "0.3"
walkdir = "2.4"
zip = "0.6"
